[tool.poetry]
name = "gke-logging"
version = "0.0.5"
description = "Utilities for interacting with logging facilities in GKE workloads"
readme = "README.md"
authors = ["Station A <oss@stationa.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.0"
starlette = {version = ">=0.18,<0.28", optional = true}

[tool.poetry.extras]
asgi = ["starlette"]

[tool.poetry.dev-dependencies]
black = "21.12b0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
